tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_host_header_in_route_and_multi_destination/a/to_b/_test_context/VirtualService.2306566421.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: route-authority
    route:
    - destination:
        host: b
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: b
      weight: 50
